# SunshineSQL

./: .gitignore  README.md  pyproject.toml
src/sunshine/: main.py
